chore: replcae String.format with formatted